develop/phase-j -> fix codex comments